[package]
name = "git-memo"
version = "0.1.0"
authors = ["umaumax <umauma7083@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
derive_builder = "0.10.2"
enum_primitive = "0.1.1"
regex = "1.5.4"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
strum = "0.21.0"
strum_macros = "0.21.1"
