[package]
name = "git-memo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
derive_builder = "0.10.2"
enum_primitive = "0.1.1"
regex = "1.5.4"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
strum = "0.24.0"
strum_macros = "0.24.0"
